Gencode/Test/Valide/test_affectation_null.deca
// Description:
//	Teste affectation null a une classe
//
// Resultats:
//	Tables des méthodes correctements construites
// 
// Attributs: exec correct automatique
//
// Historique:
//    cree le 13/01/2012


class A {

   int x = 0;
}


A a;
{
 a = new A();
 a = null;
}

